--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,22 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "type": "node",
+            "name": "vscode-jest-tests.v2",
+            "request": "launch",
+            "program": "${workspaceFolder}/BE/node_modules/.bin/jest",
+            "args": [
+                "--runInBand",
+            ],
+            "cwd": "${workspaceFolder}/BE",
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "windows": {
+                "program": "${workspaceFolder}/node_modules/jest/bin/jest"
+            }
+        },
+
 
         {
             "type": "node",
@@ -16,7 +32,8 @@
             "program": "${workspaceFolder}/BE/app.js", 
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
-            ]
+            ],
+            
         }
-    ]
+    ],
 }
